--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,15 @@ ul {
 	font-size: 15px;
 }
 
+.dark {
+	color: #fff;
+}
+
+.dark .btn {
+	background: #f4f4f4;
+	color: #333;
+}
+
 .btn:hover {
 	opacity: 0.9;
 }
@@ -130,6 +139,7 @@ ul {
 	width: 100%;
 	height: 350px;
 	background: url('../img/xbox.png') no-repeat center center/cover;
+	margin-bottom: 20px;
 }
 
 .xbox .content {
@@ -137,6 +147,17 @@ ul {
 	padding: 50px 0 0 30px;
 }
 
-.xbox p {
+.xbox p, .carbon p {
 	margin: 10px 0 20px;
+}
+
+.carbon {
+	width: 100%;
+	height: 350px;
+	background: url('../img/carbon.jpg') no-repeat center center/cover;
+}
+
+.carbon .content{
+	width: 55%;
+	padding: 100px 0 0 30px;
 }
